created from student_view in the InfoBook but was setting gid=0 for
each new one.

Fixed the create_infobook.php install script so that the enrolstatus
has the full compliment of enum values - should have been done back in
0.8.13!

Rejigged report_incidents_list page in the ReportBook to high-light
students with "Open" Incidents. Bugfix for passing sids on the
clickthru to the InfoBook too.


Version ClaSS-0.8.24 release (2007/08/17)
-----------------------------------------

Moved the path to phpmailer library out of the functions and into a
new $CFG option in school.php.  Use of phpmailer will soon be
obligatory for all emails and this is therefore now a dependency and
mentioned in the install README as such.

Added a multiline option for importing csv records split across
multiple lines - which is often the case with spreadsheet exports for
student records.

Slight changes to the guardian and student tables to lengthen the
forename and surname fields. The guardian title field is made an enum
and this replaces the prefix field (which was never implemented
anyway).

Added a new field senrole to the users table to allow any user to be
given acces to the seneeds tab (it is was restricted to role=sen
previously). This senrole field is checked in the logbook to add the
seneeds to the book array if needed. Also senrole can be set to yes or
no in the staff_details page by an admin user.

fetchStudent now includes a call to schoolarray to allow for localised
changes to fields.

A new field added to info table and included as part of the $Student
and $Enrolment arrays to record admission's notes. This is revealed as
a onhover on the admin enrolments' page and can be edited as part the
enrolments screen in the Infobook.

Included joining enrolment community as part of import_students when
they have a yeargroup_id set. Current enrolment year is default and not yet
changeable.

Added mailing as a field to the student import definition.
