@@ -169,6 +169,7 @@ function get_user($tid){
 	}
 
 function checkCurrentRespon($r,$respons,$required='subject'){
+	$error=array();
 	if($r>-1){
 		$bid=$respons[$r]['subject_id'];
 		$crid=$respons[$r]['course_id'];
