@@ -34,6 +34,8 @@ Rejigged report_incidents_list page in the ReportBook to high-light
 students with "Open" Incidents. Bugfix for passing sids on the
 clickthru to the InfoBook too.
 
+Tidied form_edit_action of warnings.
+
 
 Version ClaSS-0.8.24 release (2007/08/17)
 -----------------------------------------
